@@ -51,6 +51,9 @@ def startswith_op(a, b):
 def endswith_op(a, b):
     return a.endswith(b)
 
+def contains_op(a, b):
+    return a.contains(b)
+
 def comma_op(a, b):
     raise NotImplementedError()
 
